[project]
name = "tptq.feacomposer"
version = "1.5.2"
description = "A feaLib wrapper for composing FEA code in Python"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Liang Hai", email = "liang@typotheque.com" }]
urls.repository = "https://github.com/typotheque/feacomposer"
urls.releasenotes = "https://github.com/typotheque/feacomposer/releases"
requires-python = ">= 3.10.0"
dependencies = [
    "fonttools >= 4.43.0"
    # https://github.com/typotheque/feacomposer/pull/2
]

[tool.poetry]
requires-poetry = ">= 2.0.0"
packages = [{ include = "tptq" }]
group.dev.dependencies = { pytest = ">= 8.3.5" }

[build-system]
requires = ["poetry-core >= 2.0.0"]
build-backend = "poetry.core.masonry.api"
