[project]
name = "tptq.feacomposer"
version = "1.7.0"
description = "A feaLib wrapper for composing FEA code in Python"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Liang Hai", email = "liang@typotheque.com" }]
urls.repository = "https://github.com/typotheque/feacomposer"
urls.releasenotes = "https://github.com/typotheque/feacomposer/releases"
requires-python = ">=3.10"
dependencies = [
    "fonttools>=4.43.0"
    # https://github.com/typotheque/feacomposer/pull/2
]

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv.build-backend]
module-root = ""
module-name = "tptq.feacomposer"

[tool.pytest.ini_options]
addopts = "test.py"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
